[package]
name = "stub-gen"
version = "0.1.0"
edition = "2021"
description = "Stub generation tool for tokenizers Python bindings"

[[bin]]
name = "stub-gen"
path = "src/main.rs"

[dependencies]
env_logger = "0.11"
pyo3 = { version="0.29", default-features = false, features = ["auto-initialize", "experimental-inspect"] }
pyo3-introspection = { version="0.29"}
