[package]
name = "safer-ffi-tokenizers"
version = "0.1.0"
edition = "2021"

[dependencies]
tokenizers = {  path = "../../../../../tokenizers", version = "0.11.0" }
safer-ffi = { version = "*", features = ["proc_macros"] }
libc = "0.2"

[lib]
crate_type = ["cdylib"]

[features]
c-headers = ["safer-ffi/headers"]
